add favicon for android

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="A Task Scheduler Application">
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <link rel="android-chrome" href="/android-chrome-192x192.png" sizes="192x192">
+    <link rel="android-chrome" href="/android-chrome-192x192.png" sizes="512x512">
     <meta name="theme-color" content="#FF5631">
     <title>TaskMaster</title>
   </head>
